# Satellite_Tracking_Project

./: .gitignore  Antenna.cpp  Antenna.hpp  CMakeLists.txt  ComPort.cpp  ComPort.hpp  Handle.cpp  Handle.hpp  Handler.cpp  Handler.hpp  PortCommand.cpp  PortCommand.hpp  Program.cpp  Program.hpp  SatTrackInterface.cpp  SatTrackInterface.hpp  Satellite.cpp  Satellite.hpp  SatelliteTrack.hpp  Satellite_New.vcxproj  Satellite_New.vcxproj.filters  Satellite_Tracking.vcxproj  Satellite_Tracking.vcxproj.filters  Satellite_Tracking_Project.sln  Satellite_Tracking_Project.vcxproj  Satellite_Tracking_Project.vcxproj.filters  TLE_CONSTANTS.hpp  TleData.cpp  TleData.hpp  User.cpp  com_command.cpp  com_connect.cpp  functions.cpp  main.cpp  master.cpp  page.out  page.txt  sat_predict.cpp  sat_track.cpp  test.cpp  (+1 more)
Debug/: vc142.idb
curl/lib/: libcurl-d_imp.lib
libsgp4/include/SGP4/: DateTime.h
libsgp4/lib/: sgp4s.lib
